--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Start fake OCM server
         run: |
-          node dist/fake-ocm-server.js &
+          node dist/src/fake-ocm-server.js &
           sleep 1
 
       - name: E2E tests
