--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "node": ">=20"
   },
   "scripts": {
-    "dev": "node dist/server.js",
+    "dev": "node dist/src/server.js",
     "build": "tsc -p tsconfig.json",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
     "test": "jest",
     "test:unit": "jest --selectProjects unit",
     "test:e2e": "jest --selectProjects e2e",
-    "start:fake-ocm": "npm run build && node dist/fake-ocm-server.js",
-    "start": "npm run build && node dist/server.js"
+    "start:fake-ocm": "npm run build && node dist/src/fake-ocm-server.js",
+    "start": "npm run build && node dist/src/server.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
