--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest",
     "test:unit": "jest --selectProjects unit",
     "test:e2e": "jest --selectProjects e2e",
+    "test:e2e:local": "./scripts/test-e2e-local.sh",
     "start:fake-ocm": "npm run build && node dist/src/fake-ocm-server.js",
     "start": "npm run build && node dist/src/server.js"
   },
