docs(sync): align docs with current runtime behavior

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
 MONGO_URI=mongodb://localhost:27017/jucr
-OCM_API_KEY=ff82541f-c8d1-4507-be67-bd07e3259c4e
 OCM_BASE_URL=https://api.openchargemap.io/v3
+OCM_API_KEY=
+
+IMPORT_CONCURRENCY=10
+IMPORT_PAGE_SIZE=100
+IMPORT_MAX_PAGES=1000
+IMPORT_START_OFFSET=0
+IMPORT_DATASET=
+IMPORT_MODIFIED_SINCE=
+
+OCM_TIMEOUT_MS=8000
+FAKE_OCM_PORT=3999
+REQUIRE_MONGO_E2E=
